[project]
name = "llmrank-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.31.0",
    "alembic==1.16.1",
    "python-dotenv==1.1.0",
    "httpx==0.28.1",
    "pydantic-settings==2.9.1",
    "slowapi==0.1.10",
    "webauthn==2.8.0",
    "pydantic[email]==2.11.3",
    "resend>=2.30.1",
    "apscheduler>=3.11.0",
    "python-multipart>=0.0.20",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = []

[tool.uv]

